[gd_scene load_steps=46 format=2]

[ext_resource path="res://Characters/Scripts/Main/Player.gd" type="Script" id=1]
[ext_resource path="res://Imports/Characters/Non-enemies/Player.png" type="Texture" id=2]
[ext_resource path="res://Imports/Other/Music/Hit.wav" type="AudioStream" id=3]
[ext_resource path="res://Imports/Other/Music/Hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://Imports/Environment/HeartUIEmpty.png" type="Texture" id=5]
[ext_resource path="res://Imports/Environment/HeartUIFull.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 100.0
height = 0.0

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "stand_left"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "stand_downward"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "stand_right"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "stand_upward"

[sub_resource type="AnimationNodeBlendSpace2D" id=11]
blend_point_0/node = SubResource( 7 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 8 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 9 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 10 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "Sword_left"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "Sword_right"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Sword_forward"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Sword_downwards"

[sub_resource type="AnimationNodeBlendSpace2D" id=34]
blend_point_0/node = SubResource( 30 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 31 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 32 )
blend_point_2/pos = Vector2( 0, -0.9 )
blend_point_3/node = SubResource( 33 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "walk_downwards"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "walk_upward"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=19]
states/Idle/node = SubResource( 11 )
states/Idle/position = Vector2( 504, 177 )
states/Sword_attack/node = SubResource( 34 )
states/Sword_attack/position = Vector2( 682, 40 )
states/Walk/node = SubResource( 16 )
states/Walk/position = Vector2( 874, 177 )
transitions = [ "Idle", "Walk", SubResource( 17 ), "Walk", "Idle", SubResource( 18 ), "Idle", "Sword_attack", SubResource( 35 ), "Walk", "Sword_attack", SubResource( 37 ), "Sword_attack", "Idle", SubResource( 38 ), "Sword_attack", "Walk", SubResource( 39 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="Animation" id=40]
resource_name = "Invincibility"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1, 1.3, 1.6, 1.8, 2, 2.2, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=26]
resource_name = "Sword_downwards"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=27]
resource_name = "Sword_forward"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=28]
resource_name = "Sword_left"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=29]
resource_name = "Sword_right"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=21]
resource_name = "stand_downward"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=22]
resource_name = "stand_left"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=23]
resource_name = "stand_right"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=24]
resource_name = "stand_upward"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk_downwards"
length = 0.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_left"
length = 0.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_right"
length = 0.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_upward"
length = 0.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="CircleShape2D" id=25]
radius = 400.125

[node name="Player" type="KinematicBody2D" groups=["player"]]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
hframes = 6
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 190 )
shape = SubResource( 1 )

[node name="players_move_anim_tree" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../Players_movement_animation")
active = true
parameters/playback = SubResource( 20 )
parameters/Idle/blend_position = Vector2( -0.0217217, 0.508621 )
parameters/Sword_attack/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( -0.0249397, 0.344828 )

[node name="Players_movement_animation" type="AnimationPlayer" parent="."]
anims/Invincibility = SubResource( 40 )
anims/RESET = SubResource( 2 )
anims/Sword_downwards = SubResource( 26 )
anims/Sword_forward = SubResource( 27 )
anims/Sword_left = SubResource( 28 )
anims/Sword_right = SubResource( 29 )
anims/stand_downward = SubResource( 21 )
anims/stand_left = SubResource( 22 )
anims/stand_right = SubResource( 23 )
anims/stand_upward = SubResource( 24 )
anims/walk_downwards = SubResource( 3 )
anims/walk_left = SubResource( 4 )
anims/walk_right = SubResource( 5 )
anims/walk_upward = SubResource( 6 )

[node name="Players_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players_area"]
visible = false
position = Vector2( 0, 40 )
shape = SubResource( 25 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 20 )
scale = Vector2( 12, 12 )
enabled = true
cast_to = Vector2( 0, 40 )

[node name="Players_hurtbox" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Players_hurtbox"]
polygon = PoolVector2Array( -130, -230, -10, -180, 100, -230, 110, -130, 200, 170, 90, 260, 20, 260, -10, 230, -20, 250, -110, 260, -220, 180, -120, -120 )

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Empty_hearts" type="TextureRect" parent="."]
light_mask = 513
margin_left = -320.0
margin_top = 420.0
margin_right = -260.0
margin_bottom = 432.0
rect_scale = Vector2( 11, 11 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Full_hearts" type="TextureRect" parent="."]
light_mask = 513
margin_left = -320.0
margin_top = 409.999
margin_right = -260.0
margin_bottom = 420.999
rect_scale = Vector2( 11, 11 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Invincibility_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Death_sprite" type="Sprite" parent="."]

[connection signal="body_entered" from="Players_hurtbox" to="." method="_on_Players_hurtbox_body_entered"]
[connection signal="timeout" from="Invincibility_timer" to="." method="_on_Invincibility_timer_timeout"]
